# commodity_trading

./: .env  .gitignore  Dockerfile.airflow  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
airflow/dags/: etl_pipeline.py
api/: main.py
data/: products.duckdb  products_cleaned.parquet
data/processed/: products_cleaned.parquet
db/: schema.sql
etl/: fetch_data.py  load_to_db.py  transform_data.py
tests/integration/: test_etl_pipeline.py
tests/unit/: test_fetchdata.py  test_load_to_db.py  test_transform_data.py
