[tool.poetry]
name = "scdk"
version = "0.1.0"
description = "ETL pipeline for product pricing analytics with Airflow, Docker, DuckDB, and Polars."
authors = ["Micky Yansah <your-email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
polars = "*"
duckdb = "*"
airflow = "^2.7.2"
requests = "*"
pytest = "*"

[tool.poetry.dev-dependencies]
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
